tests/errors/runtime.KeyNotFound.res
John
Doe
>> Runtime | File: runtime.KeyNotFound.art
     error | Line: 9
           | 
           | dictionary key not found: country
           | perhaps you meant... name ?
           |                or... surname ?
           |                or... age ?